--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			</div>
 		</div>
-
+		<script type="text/javascript" src="./database.js"></script>
 		<script type="text/javascript" src="./index.js"></script>
 
 	</div>
